Fix: Dragging on mobile working incorrectly & Add cat page

--- a/css/bubblegallery.css
+++ b/css/bubblegallery.css
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 30px;
+    gap: var(--gallery-gap);
 }
 
 #gallery:active {
